@@ -1,6 +1,11 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.160 2005/01/28 20:23:05 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.161 2005/01/28 20:53:39 wolf31o2 Exp $
+
+  28 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  livecd/runscript/hppa-archscript.sh, livecd/runscript/sparc-archscript.sh,
+  livecd/runscript/sparc64-archscript.sh:
+  Force devfs if udev is not selected for all supporting arches.
 
   28 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   livecd/runscript/alpha-archscript.sh, livecd/runscript/x86-archscript.sh,
